--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,18 +2,22 @@
 <hr />
 
 <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
-  <div class="col">
+  <div class="col animated fadeIn fast" *ngFor="let heroe of heroes">
     <div class="card">
       <img
-        src="assets/img/aquaman.png"
+        [src]="heroe.img"
         class="card-img-top img-fluid"
-        alt="..."
+        [alt]="heroe.nombre"
       />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">{{ heroe.nombre }}</h5>
         <p class="card-text">
-          This is a longer card with supporting text below as a natural lead-in
-          to additional content. This content is a little bit longer.
+          {{ heroe.bio }}
+        </p>
+        <p class="card-text">
+          <small class="text-muted">
+            {{ heroe.aparicion }}
+          </small>
         </p>
         <button class="btn btn-outline-primary btn-block">Ver mas...</button>
       </div>
