--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,16 +1,26 @@
-<h1>
-  {{ hero!.nombre }} <small>{{ hero!.aparicion }}</small>
+<h1 class="animated fadeIn fast">
+  {{ hero!.nombre | uppercase }}
+  <small>({{ hero!.aparicion | date : "y" }})</small>
 </h1>
 <hr />
 
-<div class="row">
+<div class="row animated fadeIn">
   <div class="col-md-4">
     <img class="img-fluid" [src]="hero.img" [alt]="hero.nombre" />
+    <br />
+    <div class="d-grid p-2">
+      <a [routerLink]="['/heroes']" class="btn btn-outline-danger">Regresar</a>
+    </div>
   </div>
   <div class="col-md-8">
     <h3>{{ hero.nombre }}</h3>
     <hr />
     <p>{{ hero.bio }}</p>
-    <div>{{ hero.casa }}</div>
+    <img *ngIf="hero.casa == 'DC'" src="assets/img/dc-logo.png" alt="DC Logo" />
+    <img
+      *ngIf="hero.casa != 'DC'"
+      src="assets/img/marvel-logo.png"
+      alt="Marvel Logo"
+    />
   </div>
 </div>
