--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -25,7 +25,7 @@
         <div class="d-grid">
           <button
             class="btn btn-outline-primary btn-block"
-            (click)="verHeroe(i)"
+            (click)="navigateToHero(i)"
           >
             Ver mas...
           </button>
