--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,35 +2,5 @@
 <hr />
 
 <div class="row row-cols-1 row-cols-md-3 g-4 py-4">
-  <div
-    class="col animated fadeIn fast"
-    *ngFor="let heroe of heroes; let i = index"
-  >
-    <div class="card">
-      <img
-        [src]="heroe.img"
-        class="card-img-top img-fluid"
-        [alt]="heroe.nombre"
-      />
-      <div class="card-body">
-        <h5 class="card-title">{{ heroe.nombre }}</h5>
-        <p class="card-text">
-          {{ heroe.bio }}
-        </p>
-        <p class="card-text">
-          <small class="text-muted">
-            {{ heroe.aparicion }}
-          </small>
-        </p>
-        <div class="d-grid">
-          <button
-            class="btn btn-outline-primary btn-block"
-            (click)="navigateToHero(i)"
-          >
-            Ver mas...
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-hero-card [heroe]="heroe" [idx]="i" *ngFor="let heroe of heroes; let i = index" />
 </div>
