--- a/src/app/components/hero-card/hero-card.component.html
+++ b/src/app/components/hero-card/hero-card.component.html
@@ -16,10 +16,7 @@
         </small>
       </p>
       <div class="d-grid">
-        <button
-          class="btn btn-outline-primary btn-block"
-          (click)="navigateToHero()"
-        >
+        <button class="btn btn-outline-primary btn-block" (click)="emitIndex()">
           Ver mas...
         </button>
       </div>
